feat: Add icons

--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,16 @@
   "name": "lol-teleport",
   "manifest_version": 3,
   "version": "1.0",
-  "description": "Open the existing summoner on a different League of Legends stats website",
+  "description": "Open the currently open summoner on a different League of Legends stats website.",
   "action": {
     "default_popup": "popup.html"
   },
   "permissions": [
     "tabs"
-  ]
+  ],
+  "icons": {
+    "48": "./icons/48.png",
+    "64": "./icons/64.png",
+    "128": "./icons/128.png"
+  }
 }
