--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
   "name": "lol-teleport",
   "description": "Easily jump between the same player on different League of Legends stats websites. Supports OP.GG, U.GG, Deeplol, and more.",
-  "version": "1.1.0",
+  "version": "1.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "package": "bun run build && zip -r dist/lol-teleport.zip dist",
-    "check": "svelte-check --tsconfig ./tsconfig.json && tsc -p tsconfig.node.json",
+    "dev": "wxt",
+    "dev:firefox": "wxt -b firefox",
+    "build": "wxt build",
+    "build:firefox": "wxt build -b firefox",
+    "zip": "wxt zip",
+    "zip:firefox": "wxt zip -b firefox",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "postinstall": "wxt prepare",
     "test": "vitest",
     "format:write": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@crxjs/vite-plugin": "2.0.0-beta.26",
     "@eslint/compat": "^1.2.6",
     "@eslint/js": "^9.19.0",
-    "@sveltejs/vite-plugin-svelte": "4.0.0",
-    "@tsconfig/svelte": "5.0.4",
-    "@types/chrome": "0.0.279",
+    "@tsconfig/svelte": "^5.0.4",
+    "@types/chrome": "^0.0.301",
+    "@types/node": "^22.13.1",
+    "@wxt-dev/module-svelte": "^2.0.0",
     "autoprefixer": "10.4.20",
     "bits-ui": "^1.0.0-next.84",
     "clsx": "^2.1.1",
@@ -28,25 +32,22 @@
     "eslint-plugin-svelte": "^2.46.1",
     "lucide-svelte": "^0.474.0",
     "postcss": "8.4.47",
-    "prettier": "^3.4.2",
+    "prettier": "3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "svelte": "^5.19.7",
-    "svelte-check": "4.0.5",
+    "svelte": "^5.1.16",
+    "svelte-check": "^4.0.7",
     "tailwind-merge": "^3.0.1",
     "tailwind-variants": "^0.3.1",
     "tailwindcss": "3.4.14",
     "tailwindcss-animate": "^1.0.7",
-    "tslib": "2.8.0",
-    "typescript": "5.6.3",
-    "typescript-eslint": "^8.22.0",
-    "typescript-svelte-plugin": "^0.3.45",
-    "vite": "5.4.10",
-    "vitest": "^3.0.4"
+    "tslib": "^2.8.1",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.23.0",
+    "wxt": "^0.19.13"
   },
   "dependencies": {
-    "@types/node": "^22.13.0",
     "mode-watcher": "^0.5.1",
-    "posthog-js": "^1.215.1"
+    "posthog-js": "^1.215.5"
   }
 }
