--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "tslib": "^2.8.1",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.23.0",
+    "vitest": "^3.0.5",
     "wxt": "^0.19.13"
   },
   "dependencies": {
