--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "tslib": "^2.8.1",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.23.0",
+    "typescript-svelte-plugin": "^0.3.45",
     "vitest": "^3.0.5",
     "wxt": "^0.19.13"
   },
