--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "mode-watcher": "^0.5.1",
-    "posthog-js": "^1.215.5"
+    "posthog-js": "^1.215.5",
+    "zod": "^3.24.2"
   }
 }
