--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lol-teleport",
-  "description": "Easily jump between the same player on different League of Legends stats websites. Supports LOLPros, OP.GG, DeepLOL, LoG, and more.",
+  "description": "Easily jump between the same player on different League of Legends stats websites. Supports LOLPros, OP.GG, DPM, DeepLOL, and more.",
   "version": "1.2.3",
   "type": "module",
   "scripts": {
